--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,18 @@
     <h1>Lasagna</h1>
     <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="scrumptious lasagna">
     <h2>Description</h2>
-    <p>This is a simple and quick recipe that has been carefully tune fined to reach ultimate perfection.</p>
+    <p>This is a simple and quick recipe that has been carefully fine tuned to reach ultimate perfection.</p>
     <p>Garfield loves this lasagna recipe so much that he bought all the necessary ingredients to make this tasty lasagna.</p>
+    <h2>ingredients</h2>
+    <ul>
+        <li>Meat</li>
+        <li>Onion and garlic</li>
+        <li>Tomato products</li>
+        <li>Sugar</li>
+        <li>Spices and seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Cheeses</li>
+        <li>Egg</li>
+    </ul>
 </body>
 </html>
