--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -21,5 +21,14 @@
         <li>Cheeses</li>
         <li>Egg</li>
     </ul>
+    <h1>Steps</h1>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instructions.</li>
+        <li>Cover the foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>
+    </ol>
 </body>
 </html>
