Add hashbrowns capitalize ingredients in lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
     <h2>Description</h2>
     <p>This is a simple and quick recipe that has been carefully fine tuned to reach ultimate perfection.</p>
     <p>Garfield loves this lasagna recipe so much that he bought all the necessary ingredients to make this tasty lasagna.</p>
-    <h2>ingredients</h2>
+    <h2>Ingredients</h2>
     <ul>
         <li>Meat</li>
         <li>Onion and garlic</li>
@@ -21,7 +21,7 @@
         <li>Cheeses</li>
         <li>Egg</li>
     </ul>
-    <h1>Steps</h1>
+    <h2>Steps</h2>
     <ol>
         <li>Make the meat sauce.</li>
         <li>Cook the noodles.</li>
@@ -30,5 +30,7 @@
         <li>Cover the foil and bake.</li>
         <li>Let the lasagna rest before serving.</li>
     </ol>
+
+
 </body>
 </html>
