--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
-
+    <a href="recipes/banana-pancakes.html">Banana Pancakes</a>
+    <a href="recipes/hashbrowns.html">Hashbrowns</a>
 </body>
 </html>
