Add banana pancakes steps

--- a/recipes/banana-pancakes.html
+++ b/recipes/banana-pancakes.html
@@ -18,7 +18,12 @@
         <li>Vegetable Oil</li>
         <li>Bananas</li>
     </ul>
-
+    <h2>Steps</h2>
+    <ol>
+        <li>Mix your dry ingredients.</li>
+        <li>Cook for a few minutes.</li>
+        <li>Serve.</li>
+    </ol>
 
 
 </body>
