--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/banana-pancakes.html">Banana Pancakes</a>
-    <a href="recipes/hashbrowns.html">Hashbrowns</a>
+    <ul>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/banana-pancakes.html">Banana Pancakes</a></li>
+    <li><a href="recipes/hashbrowns.html">Hashbrowns</a></li>
+    </ul>
 </body>
 </html>
