Add pancake description

--- a/recipes/banana-pancakes.html
+++ b/recipes/banana-pancakes.html
@@ -5,8 +5,11 @@
     <title>Pancakes</title>
 </head>
 <body>
-    <h1>Pancakes</h1>
+    <h1> Banana Pancakes</h1>
     <img src="https://www.allrecipes.com/thmb/SB1BRS87CCN5h6CTylPWljfn0Vk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20334-banana-pancakes-i-DDMFS-4x3-9f291f03044247d48c9ec26917952402.jpg" alt="banana pancakes">
+    <h2>Description</h2>
+    <p>These pancakes are peak. I love pancakes.</p>
+    <p>Yummy.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>Flour</li>
