--- a/recipes/hashbrowns.html
+++ b/recipes/hashbrowns.html
@@ -8,8 +8,8 @@
     <h1>Hashbrowns</h1>
     <img src="https://www.allrecipes.com/thmb/bmwOid50gix4E6q9R0MjNOJVXwU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/57783-emilys-famous-hash-browns-DDMFS-4x3-ce2a6ec1178640258faf601d6848ff11.jpg" alt="crispy hashbrowns">
     <h2>Description</h2>
-    <p>These are hashbrowns idk what to say about them but they are looking delicious.</p>
-    <p>Thanks to whoever created hashbrowns. I LOVE THEM!!!</p>
+    <p>Look no further if you're searching for the best hashbrown recipe.</p>
+    <p>Thanks to whoever invented hashbrowns. I LOVE THEM!!!</p>
     <h2>Ingredients</h2>
     <ul>
         <li>2 medium russet potatoes, shredded</li>
