Added return button

--- a/recipes/banana-pancakes.html
+++ b/recipes/banana-pancakes.html
@@ -27,7 +27,7 @@
         <li>Cook for a few minutes.</li>
         <li>Serve.</li>
     </ol>
-
+    <a href="../index.html">Return to home page</a>
 
 </body>
 </html>
