--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
     <h1>Lasagna</h1>
@@ -31,6 +32,6 @@
         <li>Let the lasagna rest before serving.</li>
     </ol>
 
-
+    <a href="../index.html">Return to home page</a>
 </body>
 </html>
