--- a/recipes/banana-pancakes.html
+++ b/recipes/banana-pancakes.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Pancakes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1> Banana Pancakes</h1>
