--- a/recipes/hashbrowns.html
+++ b/recipes/hashbrowns.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Hashbrowns</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Hashbrowns</h1>
